--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="icon" type="image/x-icon" href="logo.png">
-    <!-- Förhindra caching av CSS -->
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="#" class="logo-link">
                 <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
             </a>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="#home">Hem</a></li>
+                <li><a href="#hero">Hem</a></li>
                 <li><a href="#services">Vårt arbete</a></li>
                 <li><a href="#about">Om oss</a></li>
                 <li><a href="#contact" class="nav-cta-button">Kontakta oss</a></li>
@@ -35,14 +31,10 @@
         </div>
     </nav>
 
-    <!-- Hero Section - Uppdaterad med JavaScript-fallback -->
-    <section class="hero" id="home">
-        <div class="hero-container" id="heroContainer">
-            <!-- Bilden laddas via JavaScript -->
-        </div>
+    <section class="hero" id="hero">
+        <img src="hero-image.jpg" alt="Brytpunkten - En väg framåt" class="hero-bg-image">
     </section>
 
-    <!-- Services Section -->
     <section class="services" id="services">
         <div class="container">
             <h2 class="section-title">Vårt arbete för ett säkrare samhälle</h2>
@@ -69,7 +61,6 @@
         </div>
     </section>
 
-    <!-- About Section - Bild istället för diagram -->
     <section class="about" id="about">
         <div class="container">
             <div class="about-grid">
@@ -83,16 +74,16 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-container">
-                        <img src="about-image.jpg" alt="Brytpunkten i arbete" class="about-img">
-                        <p class="image-note">Bild på vårt arbete i samhället</p>
+                    <div class="chart-container">
+                        <h3>Vår inverkan</h3>
+                        <canvas id="impactChart"></canvas>
+                        <p class="chart-note">* Baserat på uppföljning av våra deltagare</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
             <div class="contact-box">
@@ -108,7 +99,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -121,7 +111,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
