--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <a href="#" class="logo-link">
@@ -31,46 +30,27 @@
         </div>
     </nav>
 
-    <!-- Hero Section - Bara bild, ingen text/knappar -->
     <section class="hero" id="hero">
         <picture>
-            <!-- Mobil: hög bild -->
             <source media="(max-width: 768px)" srcset="hero-mobile.jpg">
-            <!-- Dator: bred bild -->
             <source media="(min-width: 769px)" srcset="hero-desktop.jpg">
-            <!-- Fallback -->
             <img src="hero-desktop.jpg" alt="Brytpunkten - En väg framåt" class="hero-bg-image">
         </picture>
     </section>
 
-    <!-- Services Section -->
     <section class="services" id="services">
         <div class="container">
             <h2 class="section-title">Vårt arbete för ett säkrare samhälle</h2>
             <p class="section-subtitle">Vi arbetar på två fronter: med att bryta kriminella banor och med att förebygga att unga ens börjar.</p>
-
             <div class="services-grid">
-                <div class="service-card">
-                    <h3>Individuellt stöd till vuxna</h3>
-                    <p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Arbete & samhällsetablering</h3>
-                    <p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Förebyggande insatser för unga</h3>
-                    <p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val och meningsfull fritid.</p>
-                </div>
-                <div class="service-card">
-                    <h3>Samverkan & nätverk</h3>
-                    <p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis.</p>
-                </div>
+                <div class="service-card"><h3>Individuellt stöd till vuxna</h3><p>Strukturerade samtal med fokus på motivation, ansvarstagande och livsval. Praktisk hjälp med boende, ekonomi och myndighetskontakter.</p></div>
+                <div class="service-card"><h3>Arbete & samhällsetablering</h3><p>Stöd med CV, jobbsökning, praktik och utbildning. Mentorer med erfarenhet av liknande utmaningar ger kontinuerligt stöd.</p></div>
+                <div class="service-card"><h3>Förebyggande insatser för unga</h3><p>Skolbesök, workshops och gruppsamtal i riskmiljöer. Informerar om konsekvenser och motiverar till positiva val och meningsfull fritid.</p></div>
+                <div class="service-card"><h3>Samverkan & nätverk</h3><p>Aktivt samarbete med myndigheter, frivård, socialtjänst och lokala organisationer. Ett rådgivande nätverk med expertis.</p></div>
             </div>
         </div>
     </section>
 
-    <!-- About Section - Bild istället för diagram -->
     <section class="about" id="about">
         <div class="container">
             <div class="about-grid">
@@ -78,7 +58,6 @@
                     <h2 class="section-title">Vår vision och metod</h2>
                     <p>Brytpunkten är en <strong>partipolitiskt och religiöst obunden</strong> ideell förening. Vår verksamhet bygger på erfarenhet, evidens och ett starkt nätverk.</p>
                     <p>Vi bedriver <strong>inte vård, behandling eller myndighetsutövning</strong>. Vår roll är att vara en stödjande och motiverande resurs som arbetar i tät samverkan med de ansvariga aktörerna i samhället.</p>
-                    <p>All vår verksamhet dokumenteras och följs upp systematisk för att säkerställa kvalitet och måluppfyllelse. Vår ambition är att på sikt kunna skala upp våra beprövade insatser i fler samhällen.</p>
                     <div class="about-quote">
                         <p>"Kort sagt stöttar Brytpunkten individer praktiskt och socialt, minskar risken för återfall i kriminalitet och sprider kunskap och motivation till unga som riskerar att hamna i samma mönster."</p>
                     </div>
@@ -93,7 +72,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section class="contact" id="contact">
         <div class="container">
             <div class="contact-box">
@@ -109,7 +87,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
@@ -122,7 +99,6 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
