--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
                 <div class="about-image">
                     <div class="image-container">
                         <img src="about-image.jpg" alt="Brytpunkten i arbete" class="about-img">
-                        <p class="image-note">Bild på vårt arbete i samhället</p>
                     </div>
                 </div>
             </div>
@@ -136,10 +135,9 @@
                 </p>
                 
                 <div class="contact-buttons">
-                    <a href="mailto:kontakt@brytpunkten.example.org" class="button button-primary button-large">Kontakta oss via e-post</a>
+                    <a href="mailto:info@brytpunkten.se" class="button button-primary button-large">Kontakta oss via e-post</a>
                     <a href="#services" class="button button-outline">Läs om vårt arbete</a>
                 </div>
-                <p class="contact-note">(Ersätt med er riktiga e-postadress)</p>
             </div>
         </div>
     </section>
