--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                     <img src="logo.png" alt="Brytpunkten logotyp" class="footer-logo-img">
                 </div>
                 <p class="footer-mission">En ideell förening med socialt och brottsförebyggande syfte. Partipolitiskt och religiöst obunden.</p>
+                <p class="footer-contact">Kontakta oss: <span class="footer-email">info@brytpunkten.se</span></p>
                 <p class="footer-copyright">&copy; <span id="currentYear"></span> Brytpunkten. Alla rättigheter förbehållna.</p>
             </div>
         </div>
