--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="#hero">Hem</a></li>
                 <li><a href="#services">Vårt arbete</a></li>
                 <li><a href="#about">Om oss</a></li>
+                <li><a href="medlem.html">Bli medlem</a></li>  <!-- NY LÄNK -->
                 <li><a href="#contact" class="nav-cta-button">Kontakta oss</a></li>
             </ul>
             <button class="hamburger" id="hamburger" aria-label="Meny">
@@ -131,7 +132,7 @@
                 </p>
                 
                 <p class="contact-text">
-                    <strong>Vi är här för att göra skillnad.</strong> Tillsammans kan vi skapa fler brytpunkter.
+                    <strong>Vi är här för och göra skillnad.</strong> Tillsammans kan vi skapa fler brytpunkter.
                 </p>
                 
                 <div class="contact-buttons">
