--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
             </a>
             <ul class="nav-menu" id="navMenu">
-                <li><a href="#hero">Hem</a></li>
-                <li><a href="#about">Om oss</a></li>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="om-oss.html">Om oss</a></li>
                 <li><a href="medlem.html">Bli medlem</a></li>
                 <li><a href="#contact" class="nav-cta-button">Kontakta oss</a></li>
             </ul>
@@ -136,7 +136,7 @@
                 
                 <div class="contact-buttons">
                     <a href="mailto:info@brytpunkten.se" class="button button-primary button-large">Kontakta oss via e-post</a>
-                    <a href="#about" class="button button-outline">Läs mer om oss</a>
+                    <a href="om-oss.html" class="button button-outline">Läs mer om oss</a>
                 </div>
             </div>
         </div>
