--- a/medlem.html
+++ b/medlem.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
 </head>
 <body>
-    <!-- NAVBAR MED FIXED VIT HEADER -->
+    <!-- NAVBAR MED FIXED VIT HEADER - SAMMA SOM INDEX -->
     <nav class="navbar member-nav">
         <div class="nav-container">
             <a href="index.html" class="logo-link">
@@ -25,7 +25,7 @@
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="index.html#about">Om oss</a></li>
+                <li><a href="om-oss.html">Om oss</a></li>
                 <li><a href="medlem.html">Bli medlem</a></li>
                 <li><a href="index.html#contact" class="nav-cta-button">Kontakta oss</a></li>
             </ul>
