--- a/om-oss.html
+++ b/om-oss.html
@@ -71,10 +71,10 @@
         </section>
 
         <!-- BILDSEKTION - Blomsterbild -->
-        <section class="image-section" style="padding: 3rem 1rem; text-align: center; background: white;">
+        <section class="image-section">
             <div class="container">
-                <img src="blommor.jpg" alt="Symbol för växt, förändring och ny början" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 5px 20px rgba(0,0,0,0.05);" loading="lazy">
-                <p style="margin-top: 1rem; color: var(--text-gray); font-style: italic; font-size: 0.9rem;">Varje människa har potential till förändring och växt</p>
+                <img src="blommor.jpg" alt="Symbol för växt, förändring och ny början" loading="lazy">
+                <p>Varje människa har potential till förändring och växt</p>
             </div>
         </section>
 
