--- a/medlem.html
+++ b/medlem.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
 </head>
 <body>
-    <!-- NAVBAR MED FIXED VIT HEADER - SAMMA SOM INDEX -->
-    <nav class="navbar member-nav">
+    <!-- NAVBAR - SAMMA SOM INDEX.HTML (INGEN member-nav) -->
+    <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo-link">
                 <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
@@ -37,6 +37,7 @@
         </div>
     </nav>
 
+    <!-- RESTEN AV MEDLEM.HTML FÖRBLIR OFÖRÄNDRAT -->
     <main>
         <!-- HERO SECTION - VIT -->
         <section class="member-hero">
