--- a/medlem.html
+++ b/medlem.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
 </head>
 <body>
-    <!-- NAVBAR - SAMMA SOM INDEX.HTML (INGEN member-nav) -->
-    <nav class="navbar">
+    <!-- NAVBAR - VIT HEADER PÅ MEDLEM -->
+    <nav class="navbar solid-nav">
         <div class="nav-container">
             <a href="index.html" class="logo-link">
                 <img src="logo.png" alt="Brytpunkten logotyp" class="logo">
