--- a/om-oss.html
+++ b/om-oss.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
 </head>
 <body>
-    <!-- NAVBAR - VIT HEADER PÅ OM-OSS -->
+    <!-- NAVBAR - VIT HEADER -->
     <nav class="navbar solid-nav">
         <div class="nav-container">
             <a href="index.html" class="logo-link">
@@ -48,18 +48,7 @@
             </div>
         </section>
 
-        <!-- VÅRT UPPDRAG -->
-        <section class="membership-section">
-            <div class="container">
-                <div class="membership-card" style="max-width: 800px; margin: 0 auto;">
-                    <h2>Vårt uppdrag</h2>
-                    <p>Brytpunkten arbetar med att bryta kriminella livsmönster och förebygga att unga hamnar i kriminalitet. Vi riktar oss till vuxna som behöver stöd för att lämna kriminalitet bakom sig, samt unga i riskmiljöer som behöver motivation till positiva livsval.</p>
-                    <p>Vår verksamhet omfattar socialt stöd, brottsbrytande insatser, stöd i vardagsstruktur samt informations- och motivationsinsatser riktade till ungdomar. Vi bedriver inte vård, behandling eller myndighetsutövning, utan arbetar stödjande och motiverande i samverkan med ansvariga aktörer.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- VÅR STYRKA + BILD -->
+        <!-- VÅR STYRKA + BILD (FLYTTAD HIT - PROBLEM #2) -->
         <section class="about">
             <div class="container">
                 <div class="about-grid" style="align-items: center;">
@@ -78,8 +67,19 @@
             </div>
         </section>
 
-        <!-- VÅRA INSATSER -->
-        <section class="services">
+        <!-- VÅRT UPPDRAG (FLYTTAD HIT - PROBLEM #2) -->
+        <section class="membership-section" style="padding-bottom: 1rem !important;"> <!-- PROBLEM #3: MINSKAT MELLANRUM -->
+            <div class="container">
+                <div class="membership-card" style="max-width: 800px; margin: 0 auto;">
+                    <h2>Vårt uppdrag</h2>
+                    <p>Brytpunkten arbetar med att bryta kriminella livsmönster och förebygga att unga hamnar i kriminalitet. Vi riktar oss till vuxna som behöver stöd för att lämna kriminalitet bakom sig, samt unga i riskmiljöer som behöver motivation till positiva livsval.</p>
+                    <p>Vår verksamhet omfattar socialt stöd, brottsbrytande insatser, stöd i vardagsstruktur samt informations- och motivationsinsatser riktade till ungdomar. Vi bedriver inte vård, behandling eller myndighetsutövning, utan arbetar stödjande och motiverande i samverkan med ansvariga aktörer.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- VÅRA INSATSER (MINDRE MELLANRUM OVANFÖR - PROBLEM #3) -->
+        <section class="services" style="padding-top: 1.5rem !important;"> <!-- PROBLEM #3: MINSKAT MELLANRUM -->
             <div class="container">
                 <h2 class="section-title">Våra konkreta insatser</h2>
                 
