--- a/om-oss.html
+++ b/om-oss.html
@@ -115,9 +115,9 @@
                     <h2 class="section-title">Samverkan & kontakt</h2>
                     
                     <div class="form-group" style="text-align: center; max-width: 700px; margin: 0 auto;">
-                        <h3 style="margin-bottom: 0.8rem; color: var(--text-dark);">Vårt nätverk för förändring</h3>
-                        <p>Brytpunkten samarbetar aktivt med myndigheter, frivården, socialtjänsten, arbetsförmedlingen och lokala organisationer. Tillsammans skapar vi en sammanhållen insats för att stödja människor på väg ut ur kriminalitet.</p>
-                        <p>Vi har ett rådgivande nätverk med kompetens inom socialt arbete, juridik, psykologi och arbetsliv som säkerställer kvalitet och legitimitet i vårt arbete.</p>
+                        <h3 style="margin-bottom: 0.8rem; color: var(--text-dark);">Samverkan och nätverk</h3>
+                        <p>Brytpunkten arbetar i nära dialog med aktörer inom socialt arbete, myndigheter, arbetsliv och lokala organisationer. Detta säkerställer att våra insatser är relevanta, sammanhållna och har hög kvalitet.</p>
+                        <p>Vi har ett rådgivande nätverk med kompetens inom socialt arbete, juridik, psykologi och arbetsliv, vilket stärker kvalitet och legitimitet i vårt arbete.</p>
                     </div>
                     
                     <div class="form-group" style="text-align: center; max-width: 700px; margin: 1.5rem auto 0;">
